--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -7,7 +7,7 @@
     = csrf_meta_tags
     %link{:href => "https://fonts.googleapis.com/icon?family=Material+Icons", :rel => "stylesheet"}
     %link{:href => "https://fonts.googleapis.com/css?family=Rock+Salt|Bangers", :rel => "stylesheet", :type => "text/css"}
-    %link{:href => "http://cheshirepus.com/mysongis.css", :rel => "stylesheet", :type => "text/css"}
+    / %link{:href => "http://cheshirepus.com/mysongis.css", :rel => "stylesheet", :type => "text/css"}
   %body
     = yield
   %footer
