--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -10,12 +10,13 @@
 			#player-container
 				#main-art
 				#player-bottom
+					/ include title and artist when play hit
 		#create-link
-		/ 	.col.s8
-		/ 		= react_component 'PlayMixtape', { current_user: current_user, mixtape_id: @mixtape_id }
-		/ 	.col.s4.backround.z-depth-3
-		/ 		-if params[:mixtape_id]
-		/ 			= react_component 'PlayMixtape', { current_user: current_user, mixtape_id: params[:mixtape_id]}
+			.col.s8
+				= react_component 'PlayMixtape', { current_user: current_user, mixtape_id: @mixtape_id }
+			.col.s4.backround.z-depth-3
+		-if params[:mixtape_id]
+			= react_component 'PlayMixtape', { current_user: current_user, mixtape_id: params[:mixtape_id]}
 		/ 		-else
 		/ 	%link{:href => "https://fonts.googleapis.com/icon?family=Material+Icons", :rel => "stylesheet"}/
 		/ -if current_user == nil
