--- a/app/views/layouts/_navbar.html.haml
+++ b/app/views/layouts/_navbar.html.haml
@@ -46,7 +46,7 @@
       %p#nav-name #{@user.full_name}
     %p.log.rel#nav-link mysong.is/#{@user.username}
 
-    %img.nav-profile-pic.borderr.z-depth-3#logo{alt: "mysong.is Logo"}
+    %img.nav-profile-pic.borderr.z-depth-3#logo
 
     %img#qr-code{:alt => "My QR code", :src => @qr}
 
