--- a/app/views/devise/registrations/edit.html.haml
+++ b/app/views/devise/registrations/edit.html.haml
@@ -4,15 +4,15 @@
     = devise_error_messages!
     = field_set_tag do
       = f.text_field :username, 
-        :value => "Username",
+        :value => "#{@username}",
         :style => "color:#aaa;",
-        :onfocus => "if(this.value=='Username'){this.value='';this.style.color = '#000';}",  
-        :onblur => "if(this.value==''){this.value='Username';this.style.color = '#aaa';}"
+        :onfocus => "if(this.value=='Username' || this.value == "#{@username}"){this.value='';this.style.color = '#000';}",  
+        :onblur => "if(this.value==''){this.value='#{@username}"';this.style.color = '#aaa';}"
       = f.text_field :email, 
-        :value => "Email",
+        :value => "#{@user.email}",
         :style => "color:#aaa;",
-        :onfocus => "if(this.value=='Email'){this.value='';this.style.color = '#000';}",  
-        :onblur => "if(this.value==''){this.value='Email';this.style.color = '#aaa';}"
+        :onfocus => "if(this.value=='Email' || this.value == "#{@user.email}"){this.value='';this.style.color = '#000';}",  
+        :onblur => "if(this.value==''){this.value='@user.email';this.style.color = '#aaa';}"
       = f.text_field :current_password,
         :value => "Current Password",
         :autocomplete => "off",
@@ -25,5 +25,17 @@
         :style => "color:#aaa;",
         :onfocus => "if(this.value=='New Password (4 characters minimum)'){this.value='';this.style.color = '#000';this.type='password'}",  
         :onblur => "if(this.value==''){this.value='New Password (4 characters minimum)';this.style.color = '#aaa';this.type='text'}"
+      = f.text_field :full_name,
+        :value => "#{@full_name}",
+        :autocomplete => "off",
+        :style => "color:#aaa;",
+        :onfocus => "if(this.value=='@full_name'){this.value='';this.style.color = '#000';}",  
+        :onblur => "if(this.value==''){this.value='#{@full_name}';this.style.color = '#aaa'}"
+      = f.text_field :picture,
+        :value => "#{@picture}",
+        :autocomplete => "off",
+        :style => "color:#aaa;",
+        :onfocus => "if(this.value=='@picture'){this.value='';this.style.color = '#000';}",  
+        :onblur => "if(this.value==''){this.value='#{@picture}';this.style.color = '#aaa'}"
       .actions.center
         %button.btn.waves-effect.waves-light= f.submit "Sign Up"
