--- a/app/views/users/edit_username.html.haml
+++ b/app/views/users/edit_username.html.haml
@@ -9,8 +9,8 @@
       = f.text_field :username, 
         :value => "#{@username}",
         :style => "color:#aaa;",
-        :onfocus => "if(this.value=='Username'){this.value='';this.style.color = '#000';}",  
-        :onblur => "if(this.value==''){this.value='Username';this.style.color = '#aaa';}"
+        :onfocus => "if(this.value=='Username' || this.value=='#{@username}'){this.value='';this.style.color = '#000';}",  
+        :onblur => "if(this.value==''){this.value='#{@username}';this.style.color = '#aaa';}"
       = f.text_field :full_name,
         :value => "Full Name",
         :style => "color:#aaa;",
