--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -4,6 +4,7 @@
   %head
     %title My Song Is
     =# stylesheet_link_tag 'application', media: 'all'
+    = stylesheet_link_tag 'images', media: 'all'
     = csrf_meta_tags
     %link{:href => "https://fonts.googleapis.com/icon?family=Material+Icons", :rel => "stylesheet"}
     %link{:href => "https://fonts.googleapis.com/css?family=Rock+Salt|Bangers", :rel => "stylesheet", :type => "text/css"}
