login page changes

--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -9,7 +9,8 @@
 				=@user.bio
 			#player-container
 				#main-art
-					
+					%img#player-art
+
 				#player-bottom
 					#player-title
 					#player-artist	
