--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,6 +1,4 @@
-<div class="row">
-  <%= image_tag('real_b.png', :class =>"one image") %>
-</div>
+<%= render 'layouts/nolognav' %>
 <h3 class="salt center rel white-text stroke">
   <strong>
     MySong.is
