--- a/app/views/users/edit_username.html.haml
+++ b/app/views/users/edit_username.html.haml
@@ -1,3 +1,4 @@
+= render 'layouts/nolognav'
 %a#about-us.bigger.image.white-text.stroke.text-glow-hover{:href => "/"} Home
 %h3.salt.center.rel.white-text.stroke MySong.is
 %body.bck
