--- a/app/assets/stylesheets/images.css.scss
+++ b/app/assets/stylesheets/images.css.scss
@@ -7,3 +7,18 @@ img {
   height: 0px;
   width: 0px;
 }
+
+#logo-login {
+  margin: 20px;
+}
+
+#twitter-login {
+  color: black;
+  margin: 20px;
+  border-style: solid;
+  border-width: 2px;
+}
+
+#email-login {
+  padding: 30px;
+}
