--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -17,5 +17,5 @@
 				= link_to 'Create your own MySong.is profile', '/users/sign_in'
 	#column-right
 		= react_component 'TopSongs', { current_user: current_user, mixtape_id: @mixtape_id }
-= react_component 'PlayMixtape', { current_user: current_user, mixtape_id: @mixtape_id }
+= react_component 'PlayMixtape', { current_user: current_user, mixtape_id: @mixtape_id, author_id: @user.id }
 = react_component 'Player'
