--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -1,6 +1,6 @@
 .row
   = image_tag('real_b.png', :class =>"one image")
-%h3.salt.center.rel.white-text.stroke
+%h3.salt.center.rel.white-text.stroke.centered
   %strong
     MySong.is
 %br
