--- a/app/assets/stylesheets/images.css.scss
+++ b/app/assets/stylesheets/images.css.scss
@@ -1,5 +1,11 @@
+
 img {
   border: 0px;
+}
+
+.transparent {
+  border: 0px !important;
+  background-color: transparent; 
 }
 
 .hidden {
@@ -20,5 +26,19 @@ img {
 }
 
 #email-login {
+  font-size: 25px;
   padding: 30px;
+}
+
+#signup-button {
+  width: 222px;
+  height: 50px;
+}
+
+.centered {
+  text-align: center;
+}
+
+.margin {
+  margin: 5px;
 }
