--- a/app/views/layouts/_navbar.html.haml
+++ b/app/views/layouts/_navbar.html.haml
@@ -42,7 +42,7 @@
       %p#nav-name #{@user.name}
     %p.log.rel#nav-link mysong.is/#{@user.username}
 
-    %img.nav-profile-pic.borderr.z-depth-3#logo
+    %img#logo
 
     %img#qr-code{:alt => "My QR code", :src => @qr}
     / .row
