--- a/app/views/layouts/_simplenav.html.haml
+++ b/app/views/layouts/_simplenav.html.haml
@@ -1,30 +1,26 @@
-
-        
 #nav
   .contents
     -if current_user == nil
       .rightbot.home-link.bigger.image.white-text.stroke.text-glow-hover.log#not-logged-in-form
         = form_for(resource, as: resource_name, url: session_path(resource_name)) do |f|
-          .col.s4
-            = f.text_field :email,
-              :value => "Email",
-              :style => "color:#000000;background-color:white;border:solid;border-width:2px;height:33px;text-indent:5px;",
-              :onfocus => "if(this.value=='Email'){this.value='';this.style.color = '#000000';}",
-              :color => "white",
-              :onblur => "if(this.value==''){this.value='Email';this.style.color = '#000000';}"
-          .col.s4
-            = f.text_field :password,
-              :value => "Password",
-              :autocomplete => "off",
-              :style => "color:#000000;background-color:white;border:solid;border-width:2px;height:33px;text-indent:5px;",
-              :onfocus => "if(this.value=='Password'){this.value='';this.style.color = '#000000';this.type='password'}",
-              :onblur => "if(this.value==''){this.value='Password';this.style.color = '#000000';this.type='text'}"
-          .col.s4
-            = f.submit "Log in", :class => 'btn black-text teal lighten-4'
+          = f.text_field :email,
+            :value => "Email",
+            :style => "color:#000000;background-color:white;border:solid;border-width:2px;height:33px;text-indent:5px;",
+            :onfocus => "if(this.value=='Email'){this.value='';this.style.color = '#000000';}",
+            :color => "white",
+            :onblur => "if(this.value==''){this.value='Email';this.style.color = '#000000';}"
+          = f.text_field :password,
+            :value => "Password", 
+            :autocomplete => "off",
+            :style => "color:#000000;background-color:white;border:solid;border-width:2px;height:33px;text-indent:5px;",
+            :onfocus => "if(this.value=='Password'){this.value='';this.style.color = '#000000';this.type='password'}",
+            :onblur => "if(this.value==''){this.value='Password';this.style.color = '#000000';this.type='text'}"
+          .nav-button
+            = f.submit "Log in", :class => 'transparent', :id => 'logout-button', :style => 'border: 0px !important;'
     -else
       #login-container
         .nav-button#logout-button
           =link_to "Log out", destroy_user_session_path, :method => :delete, :class => "home-link bigger image white-text stroke text-glow-hover log"
         .nav-button#edit-profile-button
           =link_to "Edit Profile", edit_user_registration_path, :class => "home-link bigger image white-text stroke text-glow-hover log"
-    %img.nav-profile-pic.borderr.z-depth-3#logo
+    %img#logo
