--- a/app/assets/stylesheets/registrations.css.scss
+++ b/app/assets/stylesheets/registrations.css.scss
@@ -1,1 +1,7 @@
 @import "materialize";
+
+#new-user {
+  border: 1px solid #CCCCCC!important;
+  border-radius: 10px;
+  margin: 2px 0px 2px 0px;
+}
