--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -1,34 +1,31 @@
+= stylesheet_link_tag "registrations.css"
+= render 'layouts/nolognav'
 .row
-  = image_tag('real_b.png', :class =>"one image")
-%h3.salt.center.rel.white-text.stroke.centered
-  %strong
-    MySong.is
-%br
-  %body.home-body
-    .container
-      %h2.center.salt Sign up
-      %br/
-      = form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
-        = devise_error_messages!
-        .field
-          = f.text_field :username, 
-            :value => "Username",
-            :style => "color:#aaa;",
-            :onfocus => "if(this.value=='Username'){this.value='';this.style.color = '#000';}",  
-            :onblur => "if(this.value==''){this.value='Username';this.style.color = '#aaa';}"
-        .field
-          = f.text_field :email, 
-            :value => "Email",
-            :style => "color:#aaa;",
-            :onfocus => "if(this.value=='Email'){this.value='';this.style.color = '#000';}",  
-            :onblur => "if(this.value==''){this.value='Email';this.style.color = '#aaa';}"
-        .field
-          = f.text_field :password, 
-            :value => "Password (4 characters minimum)",
-            :autocomplete => "off",
-            :style => "color:#aaa;",
-            :onfocus => "if(this.value=='Password (4 characters minimum)'){this.value='';this.style.color = '#000';this.type='password'}",  
-            :onblur => "if(this.value==''){this.value='Password (4 characters minimum)';this.style.color = '#aaa';this.type='text'}"
-        .actions.center
-          %button.btn.waves-effect.waves-light= f.submit "Sign Up"
-          / <button class="btn mix-color waves-effect waves-light">Back</button>
+  %h1.center Sign up
+  %div.form-box.col.m4.offset-m4.l4.offset-l4
+    = form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
+      = devise_error_messages!
+      = f.text_field :username, 
+      :id => "new-user",
+      autofocus: true,
+      :value => "Username",
+      :style => "color:#000000;background-color:white;border:solid;border-width:2px;height:33px;text-indent:5px;width:220px",
+      :onfocus => "if(this.value=='Username'){this.value='';this.style.color = '#000000';}",
+      :color => "white",
+      :onblur => "if(this.value==''){this.value='Username';this.style.color = '#000000';}"
+      = f.text_field :email,
+      :value => "Email",
+      :id => "new-user",
+      :style => "color:#000000;background-color:white;border:solid;border-width:2px;height:33px;text-indent:5px;",
+      :onfocus => "if(this.value=='Email'){this.value='';this.style.color = '#000000';}",
+      :color => "white",
+      :onblur => "if(this.value==''){this.value='Email';this.style.color = '#000000';}"
+      = f.text_field :password, autocomplete: "off", :class => 'new-account-form',
+      :value => "New Password (4 characters minimum)",
+      :id => "new-user",
+      :autocomplete => "off",
+      :style => "color:#000000;background-color:white;border:solid;border-width:2px;height:33px;text-indent:5px;",
+      :onfocus => "if(this.value=='New Password (4 characters minimum)'){this.value='';this.style.color = '#000000';this.type='password'}",  
+      :onblur => "if(this.value==''){this.value='New Password (4 characters minimum)';this.style.color = '#000000';this.type='text'}"
+      .centered.nav-button
+        %span#signup-button= f.submit "Sign Up", class: "finish-signup transparent", style: "border: 0px !important;"
