--- a/app/views/devise/registrations/edit.html.haml
+++ b/app/views/devise/registrations/edit.html.haml
@@ -1,31 +1,34 @@
+= stylesheet_link_tag "registrations.css"
 = render 'layouts/nolognav'
-.container
-  %h2.center-align Complete Registration.
-  = devise_error_messages!
-  = form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f|
-    - if !@omni
-      = field_set_tag do
-        = f.text_field :username, 
-          :value => "#{@username}",
-          :style => "color:#aaa;",
-          :onfocus => "if(this.value=='Username' || this.value == '#{@username}'){this.value='';this.style.color = '#000';}",  
-          :onblur => "if(this.value==''){this.value='#{@username}';this.style.color = '#aaa';}"
-        = f.text_field :email, 
-          :value => "#{@user.email}",
-          :style => "color:#aaa;",
-          :onfocus => "if(this.value=='Email' || this.value == '#{@email}'){this.value='';this.style.color = '#000';}",  
-          :onblur => "if(this.value==''){this.value='#{@email}';this.style.color = '#aaa';}"
+.row
+  %h1.center Customize Profile
+  %div.form-box.col.m4.offset-m4.l4.offset-l4.s4.offset-s4
+    = devise_error_messages!
+    = form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
+      - if !@omni
+        = f.text_field :username,
+        :value => "#{@username}",
+        :style => "color:#aaa;",
+        :onfocus => "if(this.value=='Username' || this.value == '#{@username}'){this.value='';this.style.color = '#000';}",
+        :onblur => "if(this.value==''){this.value='#{@username}';this.style.color = '#aaa';}"
+        = f.text_field :email,
+        :value => "Email",
+        :id => "new-user",
+        :style => "color:#000000;background-color:white;border:solid;border-width:2px;height:33px;text-indent:5px;",
+        :onfocus => "if(this.value=='Email'){this.value='';this.style.color = '#000000';}",
+        :color => "white",
+        :onblur => "if(this.value==''){this.value='Email';this.style.color = '#000000';}"
         = f.text_field :current_password,
           :value => "Current Password",
           :autocomplete => "off",
           :style => "color:#aaa;",
-          :onfocus => "if(this.value=='Current Password'){this.value='';this.style.color = '#000';this.type='password'}",  
+          :onfocus => "if(this.value=='Current Password'){this.value='';this.style.color = '#000';this.type='password'}",
           :onblur => "if(this.value==''){this.value='Current Password';this.style.color = '#aaa';this.type='text'}"
         = f.text_field :password,
           :value => "New Password (4 characters minimum)",
           :autocomplete => "off",
           :style => "color:#aaa;",
-          :onfocus => "if(this.value=='New Password (4 characters minimum)'){this.value='';this.style.color = '#000';this.type='password'}",  
+          :onfocus => "if(this.value=='New Password (4 characters minimum)'){this.value='';this.style.color = '#000';this.type='password'}",
           :onblur => "if(this.value==''){this.value='New Password (4 characters minimum)';this.style.color = '#aaa';this.type='text'}"
         = f.text_field :name,
           :value => "#{@name}",
@@ -35,35 +38,42 @@
           :onblur => "if(this.value==''){this.value='#{@name}';this.style.color = '#aaa'}"
         = f.text_field :picture,
           :value => "#{@picture}",
+          :class => "password-margin",
           :autocomplete => "off",
           :style => "color:#aaa;",
           :onfocus => "if(this.value=='#{@picture}'){this.value='';this.style.color = '#000';}",  
           :onblur => "if(this.value==''){this.value='#{@picture}';this.style.color = '#aaa'}"
-      .actions.center
-        %button.btn.waves-effect.waves-light= f.submit "Update your profile"
-    -else
-      = field_set_tag do
+        .centered.nav-button
+          %span#signup-button= f.submit "Sign Up", class: "finish-signup transparent", style: "border: 0px !important;"
+      -else
         = f.text_field :username, 
-          :value => "#{@username}",
-          :style => "color:#aaa;",
-          :onfocus => "if(this.value=='Username' || this.value == '#{@username}'){this.value='';this.style.color = '#000';}",  
-          :onblur => "if(this.value=='' || this.value=='#{@username}'){this.value='#{@username}';this.style.color = '#aaa';}"
-        = f.text_field :email, 
-          :value => "#{@email}",
-          :style => "color:#aaa;",
-          :onfocus => "if(this.value=='Email' || this.value == '#{@email}'){this.value='';this.style.color = '#000';}",  
-          :onblur => "if(this.value=='' || this.value=='#{@email}'){this.value='#{@email}';this.style.color = '#aaa';}"
+        :id => "new-user",
+        :value => "#{@username}",
+        :style => "color:#000000;background-color:white;border:solid;border-width:2px;height:33px;text-indent:5px;width:220px",
+        :onfocus => "if(this.value=='#{@username}'){this.value='';this.style.color = '#000000';}",
+        :color => "white",
+        :onblur => "if(this.value==''){this.value='#{@username}';this.style.color = '#000000';}"
+        = f.text_field :email,
+        :value => "#{@email}",
+        :id => "new-user",
+        :style => "color:#000000;background-color:white;border:solid;border-width:2px;height:33px;text-indent:5px;",
+        :onfocus => "if(this.value=='#{@email}'){this.value='';this.style.color = '#000000';}",
+        :color => "white",
+        :onblur => "if(this.value==''){this.value='#{@email}';this.style.color = '#000000';}"
         = f.text_field :name,
-          :value => "#{@name}",
-          :autocomplete => "off",
-          :style => "color:#aaa;",
-          :onfocus => "if(this.value=='#{@name}'){this.value='';this.style.color = '#000';}",  
-          :onblur => "if(this.value=='' || this.value=='#{@name}'){this.value='#{@name}';this.style.color = '#aaa'}"
+        :value => "#{@name}",
+        :id => "new-user",
+        :style => "color:#000000;background-color:white;border:solid;border-width:2px;height:33px;text-indent:5px;",
+        :onfocus => "if(this.value=='#{@name}'){this.value='';this.style.color = '#000000';}",
+        :color => "white",
+        :onblur => "if(this.value==''){this.value='#{@name}';this.style.color = '#000000';}"
         = f.text_field :picture,
-          :value => "#{@picture}",
-          :autocomplete => "off",
-          :style => "color:#aaa;",
-          :onfocus => "if(this.value=='#{@picture}'){this.value='';this.style.color = '#000';}",  
-          :onblur => "if(this.value=='' || this.value=='#{@picture}'){this.value='#{@picture}';this.style.color = '#aaa'}"
-      .actions.center
-        %button.btn.waves-effect.waves-light= f.submit "Update your profile"
+        :value => "#{@picture}",
+        :id => "new-user",
+        :class => "password-margin",
+        :style => "color:#000000;background-color:white;border:solid;border-width:2px;height:33px;text-indent:5px;",
+        :onfocus => "if(this.value=='#{@picture}'){this.value='';this.style.color = '#000000';}",
+        :color => "white",
+        :onblur => "if(this.value==''){this.value='#{@picture}';this.style.color = '#000000';}"
+        .centered.nav-button
+          %span#signup-button= f.submit "Save", class: "finish-signup transparent", style: "border: 0px !important;"
