--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -2,7 +2,7 @@
 = render 'layouts/nolognav'
 .row
   %h1.center Sign up
-  %div.form-box.col.m4.offset-m4.l4.offset-l4
+  %div.form-box.col.m4.offset-m4.l4.offset-l4.s4.offset-s4
     = form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
       = devise_error_messages!
       = f.text_field :username, 
@@ -23,6 +23,7 @@
       = f.text_field :password, autocomplete: "off", :class => 'new-account-form',
       :value => "New Password (4 characters minimum)",
       :id => "new-user",
+      :class => "password-margin",
       :autocomplete => "off",
       :style => "color:#000000;background-color:white;border:solid;border-width:2px;height:33px;text-indent:5px;",
       :onfocus => "if(this.value=='New Password (4 characters minimum)'){this.value='';this.style.color = '#000000';this.type='password'}",  
