--- a/app/assets/stylesheets/images.css.scss
+++ b/app/assets/stylesheets/images.css.scss
@@ -39,6 +39,12 @@ img {
   padding: 5px;
 }
 
+#target {
+  height: 200;
+  background-size: 200px;
+  background-repeat: no-repeat;
+}
+
 .form-box {
   width: 300px;
   margin-left: 60px;  
