--- a/app/views/devise/registrations/edit.html.haml
+++ b/app/views/devise/registrations/edit.html.haml
@@ -4,7 +4,7 @@
   %h1.center Customize Profile
   %div.form-box.col.m4.offset-m4.l4.offset-l4.s4.offset-s4
     = devise_error_messages!
-    = form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
+    = form_for(resource, as: resource_name, url: registration_path(resource_name), html: { multipart: true }  ) do |f|
       - if !@omni
         = f.text_field :username,
         :value => "#{@username}",
@@ -36,6 +36,13 @@
           :style => "color:#aaa;",
           :onfocus => "if(this.value=='#{@name}'){this.value='';this.style.color = '#000';}",  
           :onblur => "if(this.value==''){this.value='#{@name}';this.style.color = '#aaa'}"
+        = f.file_field :image,
+          :value => "#{@image}",
+          :id => "new-user",
+          :style => "color:#000000;background-color:white;border:solid;border-width:2px;height:33px;text-indent:5px;",
+          :onfocus => "if(this.value=='#{@image}'){this.value='';this.style.color = '#000000';}",
+          :color => "white",
+          :onblur => "if(this.value==''){this.value='#{@image}';this.style.color = '#000000';}"
         = f.text_field :picture,
           :value => "#{@picture}",
           :class => "password-margin",
@@ -67,6 +74,7 @@
         :onfocus => "if(this.value=='#{@name}'){this.value='';this.style.color = '#000000';}",
         :color => "white",
         :onblur => "if(this.value==''){this.value='#{@name}';this.style.color = '#000000';}"
+        = f.file_field :image
         = f.text_field :picture,
         :value => "#{@picture}",
         :id => "new-user",
