--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,3 +1,6 @@
+= javascript_include_tag 'application'
+
+= javascript_include_tag 'components'
 
 !!!
 %html
@@ -13,4 +16,3 @@
   %body
     = yield
   %footer
-    = javascript_include_tag 'application'
